--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             </div>
         </div>
         <canvas id="c"></canvas>
+        <div class="buttons">
+            <button id="previous" class="btn btn-light">previous</button>
+            <button id="next" class="btn btn-light">next</button>
+        </div>
     </div>
 
     <div class="popup-window">
