--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
         </div>
     </div>
 
-    <div class="popup-window">
+    <div class="popup-window container" data-target="1">
         <button id="btn-close" class="btn btn-primary">
             close
         </button>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                video
+            </div>
+            <div class="col-12 col-md-6">
+                text
+            </div>
+        </div>
+
         <div class="content"></div>
     </div>
 
